@@ -106,6 +106,17 @@ geanylua/glspi_app.c
 geanylua/glspi_dlg.c
 geanylua/glspi_run.c
 
+# GeanyPG
+geanypg/src/aux.c
+geanypg/src/decrypt_cb.c
+geanypg/src/encrypt_cb.c
+geanypg/src/geanypg.c
+geanypg/src/key_selection_dialog.c
+geanypg/src/pinentry.c
+geanypg/src/sign_cb.c
+geanypg/src/verify_aux.c
+geanypg/src/verify_cb.c
+
 # GeanyPrj
 geanyprj/src/geanyprj.c
 geanyprj/src/geanyprj.h
